# aDTN-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aDTNConfig.cmake.in  index.html  index.md  params.json
bundleAgent/: BUILD  CMakeLists.txt
bundleAgent/adtnd/: adtnd.sh
bundleAgent/common/: CMakeLists.txt  bundle.c  code.c  config.c  init.c  log.c  minIni.c  neighbours.c  queue.c  rit.c  shm.c  stats.c  utils.c
bundleAgent/common/include/: bundle.h  code.h  common.h  config.h  constants.h  executor.h  init.h  log.h  minGlue.h  neighbours.h  queue.h  rit.h  shm.h  stats.h  utils.h  utlist.h
bundleAgent/config/: adtn.ini
bundleAgent/config/default_codes/: forwarding.c  life.c  prio.c  routing.c
bundleAgent/config/routing_codes/: forwardingTTR.c
bundleAgent/core/: CMakeLists.txt  processor.c  receiver.c
bundleAgent/executor/: CMakeLists.txt  executor.c  worker.c
bundleAgent/executor/include/: executor.h  worker.h  world.h
bundleAgent/executor/modules/: codes.c  exec.c  hash.c
bundleAgent/executor/modules/exec_c_helpers/: CMakeLists.txt  adtnrhelper.c  adtnrithelper.c
bundleAgent/executor/modules/exec_c_helpers/include/: adtnrhelper.h  adtnrithelper.h
bundleAgent/executor/modules/include/: codes.h  exec.h  hash.h
bundleAgent/executor_ebpf/: CMakeLists.txt  executor.c
bundleAgent/executor_ebpf/ebpf/: exec.c  exec.h  vm
bundleAgent/executor_native/: worker.c
bundleAgent/executor_native/modules/: exec.c  hash.c
bundleAgent/executor_native/modules/exec_c_helpers/: adtnrhelper.c
bundleAgent/executor_native/modules/include/: exec.h
bundleAgent/information_exchange/: actions.c  debug.c  global.c  hash.c  information_exchange.c  irm_helper.c  net.c  packet_builder.c  packet_processor.c
bundleAgent/information_exchange/include/: constants.h  debug.h  global.h  hash.h  information_exchange.h  packet.h  packet_processor.h
bundleAgent/queue/: CMakeLists.txt  queueManager.c
c_doxygen/: adtn_8h.html  adtn_8h_source.html  annotated.html  classes.html  dir_044dc3436ed03c16ba253ef46c11aaa3.html  dir_0c6b11235db861fe80716b23526400b6.html  dir_8ef82232e61e9050b8e858d5fdd66ffe.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a4f29b99a4f7418161f089241a24c9b5.html  dir_c68aa2dfb32282b1eebfafa3d8ceb711.html  dir_d44c64559bbebec7f509842c48db8b23.html  file_list_index.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index_old.html  rit_8h.html  rit_8h_source.html  structsock__addr__t.html
c_doxygen/search/: all_0.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  search.js  variables_0.js  variables_1.js
examples/: CMakeLists.txt  adtn-neighbours.c  adtn-ping.c  adtn-traceroute.c
java_doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
java_doc/cat/uab/senda/adtn/comm/: AddressInUseException.html  CodeBindException.html  Comm.html  InvalidArgumentException.html  JNIException.html  (+7 more)
java_doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
lib/: CMakeLists.txt
lib/api/: CMakeLists.txt  adtn.c
lib/api/include/: adtn.h  uthash.h
libPython/: README.rst  adtn.py  setup.py
libj/: README  build.xml  compileAdtnlibj.sh
libj/c/: cat_uab_senda_adtn_adtnlibj_comm_PlatfComm.c  cat_uab_senda_adtn_comm_Comm.c  src_cat_uab_senda_adtn_comm_Comm.c
libj/examples/: build.xml
libj/java-examples/: README  build.xml
make_debs/: create_debs.sh  deb_adtn.sh  deb_examples.sh  deb_lib.sh  deb_platform.sh  deb_tools.sh
make_debs/configs/: create_deb.conf
make_debs/configs/init/: adtn  adtnplatform
make_debs/install_scripts/: README
make_debs/install_scripts/adtn/: constants  postinstall  postremove
make_debs/install_scripts/examples/: postinstall-pak
make_debs/install_scripts/lib/: postremove-pak
make_debs/install_scripts/platform/: constants  postinstall  preremove
make_debs/install_scripts/tools/: postinstall-pak
platform/: CMakeLists.txt  HOWTO  INSTALL  README  TROUBLESHOOTING  eINSTALL
platform/adtnd/: adtnd.sh
platform/common/: CMakeLists.txt  bundle.c  config.c  init.c  log.c  neighbours.c  queue.c  rit.c  shm.c  stats.c  utils.c
platform/common/include/: bundle.h  common.h  config.h  constants.h  executor.h  habitat.h  init.h  log.h  neighbours.h  paillier.h  paths.h  rit.h  rit_paths.h  shm.h  stats.h  utils.h
platform/config/: adtn.ini
platform/config/default_codes/: life.c  prio.c
platform/core/: CMakeLists.txt  processor.c  receiver.c
platform/executor/: CMakeLists.txt  executor.c  worker.c
platform/executor/include/: executor.h  world.h
platform/executor/modules/: codes.c  exec.c
platform/executor/modules/exec_c_helpers/: adtnrhelper.c
platform/executor/modules/exec_c_helpers/include/: adtnrhelper.h  adtnrithelper.h
platform/information_exchange/: CMakeLists.txt  actions.c  debug.c  global.c  hash.c  information_exchange.c  irm_helper.c  net.c  packet_processor.c
platform/information_exchange/include/: constants.h  debug.h  information_exchange.h  packet.h
platform/queue/: CMakeLists.txt  queueManager.c
python_doc/: adtn.html
swcodes/: max-k-node_k-1.c  max-k-node_k-1.ebpf.s
tools/: CMakeLists.txt  adtn-neighbours.c  adtn-ping.c  adtn-sender.c  adtn-traceroute.c
tools/puppeteer/: CMakeLists.txt  puppetMasterLib.cpp
tools/puppeteer/include/: puppetMasterLib.hpp  puppetStats.hpp
tools/puppeteer/tests/: testUtils.c
tools/puppeter/: CMakeLists.txt  bundleAgentTest.cpp  puppetLib.c  puppetMasterLib.cpp  puppetStats.cpp  puppeter.cpp
tools/puppeter.old/: CMakeLists.txt  ct_puppeter.cpp  executeCode.c  puppeter.cpp  puppeter.cpp.ref
tools/puppeter/demos/: executorTest.cpp  sendBundles.c
tools/puppeter/include/: puppetMasterLib.h  puppetMasterLib.hpp  puppeteerCommon.h
tools/puppeter/tests/: CMakeLists.txt  bundleAgent_Test_1.cpp
(+52 files in other folders)
